Update index.html: updated more info

--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 <nav>
   <div class="logo" style="color:#fff; font-weight:bold;">Sudarshan Gautam</div>
   <div class="nav-links" id="navLinks">
-    <a href="#home" data-en="Home" data-sa="मुख्यपृष्ठ">Home</a>
-    <a href="#about" data-en="About Me" data-sa="मेरे बारे में">About Me</a>
-    <a href="#achievements" data-en="Awards & Achievements" data-sa="पुरस्कार और उपलब्धियाँ">Awards & Achievements</a>
-    <a href="#skills" data-en="Skills & Expertise" data-sa="कौशल और विशेषज्ञता">Skills & Expertise</a>
-    <a href="#workshops" data-en="Workshops" data-sa="कार्यशालाएँ">Workshops</a>
-    <a href="#seminars" data-en="Seminars/Conferences" data-sa="सम्मेलन/संगोष्ठियाँ">Seminars/Conferences</a>
-    <a href="#lectures" data-en="Lectures" data-sa="व्याख्यान">Lectures</a>
-    <a href="#publications" data-en="Publications" data-sa="प्रकाशन">Publications</a>
-    <a href="#gallery" data-en="Gallery" data-sa="गैलरी">Gallery</a>
-    <a href="#additional" data-en="Additional Info" data-sa="अतिरिक्त जानकारी">Additional Info</a>
-    <a href="#contact" data-en="Contact" data-sa="संपर्क करें">Contact</a>
+    <a href="#home" data-en="Home" data-sa="मुख्यपृष्ठम्">Home</a>
+    <a href="#about" data-en="About Me" data-sa="मदीयविषये">About Me</a>
+    <a href="#achievements" data-en="Awards & Achievements" data-sa="पुरस्काराः एवम् उपलब्धयः">Awards & Achievements</a>
+    <a href="#skills" data-en="Skills & Expertise" data-sa="प्रावीण्यं / विशेषज्ञता">Skills & Expertise</a>
+    <a href="#workshops" data-en="Workshops" data-sa="कार्यशालाः">Workshops</a>
+    <a href="#seminars" data-en="Seminars/Conferences" data-sa="सम्मेलनानि/सङ्गोष्ठ्यश्च ">Seminars/Conferences</a>
+    <a href="#lectures" data-en="Lectures" data-sa="व्याख्यानानि">Lectures</a>
+    <a href="#publications" data-en="Publications" data-sa="प्रकाशनानि">Publications</a>
+    <a href="#gallery" data-en="Gallery" data-sa="चित्रपटलम्">Gallery</a>
+    <a href="#additional" data-en="Additional Info" data-sa="अतिरिक्त-प्रमेयाः">Additional Info</a>
+    <a href="#contact" data-en="Contact" data-sa="सम्पर्कः">Contact</a>
   </div>
   <div class="hamburger" onclick="toggleMenu()">
     <div></div><div></div><div></div>
@@ -142,22 +142,26 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 <!-- Header -->
 <header id="home">
   <h1 data-en="Sudarshan Gautam" data-sa="सुदर्शन गौतम">Sudarshan Gautam</h1>
-  <p data-en="Researcher in Linguistics & NLP" data-sa="भाषाविज्ञान और एनएलपी में शोधकर्ता">Researcher in Linguistics & NLP</p>
-  <a href="CV.pdf" class="btn" target="_blank" data-en="Download CV" data-sa="CV डाउनलोड करें">Download CV</a>
+  <p data-en="Researcher in Linguistics & NLP" data-sa="भाषाविज्ञानस्य, पारम्परिकवैदिकसंस्कृतसाहित्यस्य, NLP इत्यस्य च शोधार्थी">Researcher in Linguistics, Traditional Vedic Literature, Sanskrit Literature, Indian Knowledge System (IKS) & NLP</p>
+  <a href="CV.pdf" class="btn" target="_blank" data-en="Download CV" data-sa="CV उपादीयताम्">Download CV</a>
 </header>
 
 <!-- About -->
 <section id="about" class="about">
   <img src="profile.jpg" alt="Sudarshan Gautam">
   <div>
-    <h2 data-en="About Me" data-sa="मेरे बारे में">About Me</h2>
-    <p data-en="Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks." 
-       data-sa="नमस्ते! मैं सुदर्शन गौतम, भाषाविज्ञान, एनएलपी और बहुभाषी कम्प्यूटेशनल फ्रेमवर्क में विशेषज्ञ शोधकर्ता हूँ।">
+    <h2 data-en="About Me" data-sa="मदीयविषये">About Me</h2>
+    <p data-en="Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks. I began my education in a gurukula, a traditional residential system of learning in India, where I was immersed in classical knowledge under the guidance of my guru. This early education provided a deep understanding of discipline, values, and the holistic approach of traditional scholarship.
+
+I hold a BA and MA in Paninian Grammar and have undertaken extensive studies in major branches of Indian philosophy, including Nyāya Darśana, Mīmāṃsā Darśana, and other classical Shastras, developing a strong foundation in logic, linguistics, and analytical reasoning.
+
+I am currently pursuing a PhD in Computational Linguistics at the Indian Institute of Technology (IIT), Banaras Hindu University (BHU), Varanasi), with a focus on Paninian Grammar. My research integrates insights from classical grammar with modern computational methods, bridging traditional linguistic theory and contemporary language technology." 
+       data-sa="नमस्ते! अहं सुदर्शन-गौतमः, भाषाविज्ञाने, NLP एवं बहुभाषीय सङ्गणकीयविषये शोधकर्ता।">
        Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.
     </p>
     <p><strong data-en="Education" data-sa="शिक्षा">Education:</strong> PhD/MSc in Linguistics, University Name</p>
-    <p><strong data-en="Interest (रुचि)" data-sa="रुचि (Interest)">Interest:</strong> Paninian Grammar, Semantic Analysis, Indian Knowledge Traditions</p>
-    <p><strong data-en="Introduction" data-sa="परिचय">Introduction:</strong> Comprehensive training in Vyākaraṇa (Pāṇinian Grammar), Nyāya, Mīmāṁsā, Vedānta, and Vedic Śrauta Yajñas both in theory and practice.</p>
+    <p><strong data-en="Interest (रुचि)" data-sa="अभिरुचिः (Interest)">Interest:</strong> Paninian Grammar, Semantic Analysis, Indian Knowledge Traditions</p>
+    <p><strong data-en="Introduction" data-sa="परिचयः">Introduction:</strong> Comprehensive training in Vyākaraṇa (Pāṇinian Grammar), Nyāya, Mīmāṁsā, Vedānta, and Vedic Śrauta Yajñas both in theory and practice.</p>
   </div>
 </section>
 
