Update index.html: updated more nformations and design

--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
   <img src="profile.jpg" alt="Sudarshan Gautam">
   <div>
     <h2 data-en="About Me" data-sa="मदीयविषये">About Me</h2>
-    <p data-en="Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks. I began my education in a gurukula, a traditional residential system of learning in India, where I was immersed in classical knowledge under the guidance of my guru. This early education provided a deep understanding of discipline, values, and the holistic approach of traditional scholarship.
+    <p data-en="Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.  
+       data-sa="नमस्ते! अहं सुदर्शन-गौतमः, भाषाविज्ञाने, NLP एवं बहुभाषीय सङ्गणकीयविषये शोधकर्ता।">
+       Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.I began my education in a gurukula, a traditional residential system of learning in India, where I was immersed in classical knowledge under the guidance of my guru. This early education provided a deep understanding of discipline, values, and the holistic approach of traditional scholarship.
 
 I hold a BA and MA in Paninian Grammar and have undertaken extensive studies in major branches of Indian philosophy, including Nyāya Darśana, Mīmāṃsā Darśana, and other classical Shastras, developing a strong foundation in logic, linguistics, and analytical reasoning.
 
-I am currently pursuing a PhD in Computational Linguistics at the Indian Institute of Technology (IIT), Banaras Hindu University (BHU), Varanasi), with a focus on Paninian Grammar. My research integrates insights from classical grammar with modern computational methods, bridging traditional linguistic theory and contemporary language technology." 
-       data-sa="नमस्ते! अहं सुदर्शन-गौतमः, भाषाविज्ञाने, NLP एवं बहुभाषीय सङ्गणकीयविषये शोधकर्ता।">
-       Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.
+I am currently pursuing a PhD in Computational Linguistics at the Indian Institute of Technology (IIT), Banaras Hindu University (BHU), Varanasi), with a focus on Paninian Grammar. My research integrates insights from classical grammar with modern computational methods, bridging traditional linguistic theory and contemporary language technology."
     </p>
     <p><strong data-en="Education" data-sa="शिक्षा">Education:</strong> PhD/MSc in Linguistics, University Name</p>
     <p><strong data-en="Interest (रुचि)" data-sa="अभिरुचिः (Interest)">Interest:</strong> Paninian Grammar, Semantic Analysis, Indian Knowledge Traditions</p>
