--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ header p { font-size:1.3em; margin-bottom:25px; }
 
 /* Navigation */
 nav { position:sticky; top:35px; background:#1e3a8a; padding:10px 20px; z-index:1000; display:flex; justify-content:space-between; align-items:center; }
-.nav-links { display:flex; gap:15px; flex-wrap:wrap; }
+.nav-links { display:flex; gap:15px; }
 .nav-links a { color:#fff; text-decoration:none; font-weight:bold; transition:0.3s; }
 .nav-links a:hover { color:#ffdd57; }
 .hamburger { display:none; flex-direction:column; cursor:pointer; gap:4px; }
@@ -56,12 +56,12 @@ section h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#1e3a8a
 .skills ul { list-style:none; display:flex; flex-wrap:wrap; gap:15px; padding:0; }
 .skills li { background:#dcfce7; padding:15px 20px; border-radius:15px; flex:1 1 200px; text-align:center; font-weight:bold; }
 
-/* Projects, Mentorship, Other Activities, Śāstrārtha */
-.projects, .mentorship, .other-activities, .sastrartha { background:#fff7ed; padding:40px; margin-bottom:50px; }
-.projects ul, .mentorship ul, .other-activities ul, .sastrartha ul { list-style:none; padding:0; }
-.projects li, .mentorship li, .other-activities li, .sastrartha li { background:#f3f4f6; margin-bottom:15px; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.05); }
+/* Projects & Mentorship */
+.projects, .mentorship { background:#fff7ed; padding:40px; }
+.projects ul, .mentorship ul { list-style:none; padding:0; }
+.projects li, .mentorship li { background:#f3f4f6; margin-bottom:15px; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.05); }
 
-/* Tabs for International/National */
+/* Workshops, Seminars, Śāstrārtha */
 .tabs { display:flex; justify-content:center; gap:15px; margin-bottom:30px; flex-wrap:wrap; }
 .tablinks { padding:10px 25px; cursor:pointer; background:#1e3a8a; color:#fff; border:none; border-radius:30px; font-weight:bold; transition:0.3s; }
 .tablinks:hover { background:#3b82f6; }
@@ -70,12 +70,8 @@ section h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#1e3a8a
 .tabcontent ul { list-style:none; padding:0; }
 .tabcontent li { background:#f3f4f6; margin-bottom:15px; padding:20px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,0.05); }
 
-/* Publications */
-.publications { background:#fff8f8; padding:40px; }
-.publications ul { list-style:none; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; padding:0; }
-.publications li { background:#ffecec; padding:25px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
-.publications li:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
-.publications a { display:inline-block; margin-top:10px; font-weight:bold; color:#ff4d4d; }
+/* Lectures */
+.lectures { background:#f9fff0; padding:40px; }
 
 /* Gallery */
 .gallery { background:#f0f0ff; padding:40px; }
@@ -86,11 +82,20 @@ section h2 { text-align:center; font-size:2em; margin-bottom:40px; color:#1e3a8a
 .gallery-grid h3 { margin-top:10px; color:#1e3a8a; }
 .gallery-grid p { font-size:0.9em; color:#555; }
 
+/* Publications */
+.publications { background:#fff8f8; padding:40px; }
+.publications ul { list-style:none; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; padding:0; }
+.publications li { background:#ffecec; padding:25px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
+.publications li:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
+.publications a { display:inline-block; margin-top:10px; font-weight:bold; color:#ff4d4d; }
+
+/* Additional Info */
+.additional { background:#f5f5f5; padding:40px; }
+
 /* Contact */
 .contact { background:#fff7ed; text-align:center; padding:40px; }
-.contact a { display:inline-flex; align-items:center; justify-content:center; margin:10px 15px; padding:12px 25px; background:#d97706; color:#fff; border-radius:30px; font-weight:bold; transition:0.3s; text-decoration:none; gap:8px; }
+.contact a { display:inline-block; margin:10px 15px; padding:12px 25px; background:#d97706; color:#fff; border-radius:30px; font-weight:bold; transition:0.3s; text-decoration:none; }
 .contact a:hover { background:#b45309; transform:translateY(-3px); }
-.contact img { width:20px; height:20px; }
 
 /* Footer */
 footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
@@ -108,74 +113,273 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 </head>
 <body>
 
-<!-- Top bar -->
+<!-- Top bar with live date -->
 <div id="topbar">
-  <span id="datetime"></span>
-  <button id="lang-toggle" onclick="toggleLanguage()">संस्कृत / English</button>
+  <span id="datetime">Loading Date & Time...</span>
+  <button id="lang-toggle" onclick="toggleLanguage()">English / Sanskrit</button>
 </div>
 
 <!-- Navigation -->
 <nav>
   <div class="logo" style="color:#fff; font-weight:bold;">Sudarshan Gautam</div>
   <div class="nav-links" id="navLinks">
-    <a href="#home" data-en="Home" data-sa="मुख्यपृष्ठ">Home</a>
-    <a href="#about" data-en="About Me" data-sa="मम विषये">About Me</a>
-    <a href="#achievements" data-en="Awards & Achievements" data-sa="पुरस्काराः">Awards & Achievements</a>
-    <a href="#skills" data-en="Skills & Expertise" data-sa="कौशलम्">Skills & Expertise</a>
-    <a href="#projects" data-en="Projects" data-sa="परियोजनाः">Projects</a>
-    <a href="#mentorship" data-en="Mentorship" data-sa="मार्गदर्शनम्">Mentorship</a>
-    <a href="#workshops" data-en="Workshops" data-sa="कार्यशालाः">Workshops</a>
-    <a href="#seminars" data-en="Seminars/Conferences" data-sa="संगोष्ठ्याः">Seminars/Conferences</a>
-    <a href="#sastrartha" data-en="Śāstrārtha/Vākyārtha" data-sa="शास्त्रार्थ/वाक्यार्थ">Śāstrārtha/Vākyārtha</a>
-    <a href="#other-activities" data-en="Other Activities" data-sa="अन्य गतिविधयः">Other Activities</a>
-    <a href="#lectures" data-en="Lectures" data-sa="व्याख्यानाः">Lectures</a>
-    <a href="#publications" data-en="Publications" data-sa="प्रकाशनानि">Publications</a>
-    <a href="#gallery" data-en="Gallery" data-sa="दर्शनीयानि">Gallery</a>
-    <a href="#additional" data-en="Additional Info" data-sa="अतिरिक्त सूचना">Additional Info</a>
-    <a href="#contact" data-en="Contact" data-sa="संपर्कः">Contact</a>
+    <a href="#home">Home</a>
+    <a href="#about">About Me</a>
+    <a href="#achievements">Awards & Achievements</a>
+    <a href="#skills">Skills & Expertise</a>
+    <a href="#projects">Projects</a>
+    <a href="#mentorship">Mentorship</a>
+    <a href="#workshops">Workshops</a>
+    <a href="#seminars">Seminars/Conferences</a>
+    <a href="#sastrartha">Śāstrārtha/Vākyārtha</a>
+    <a href="#other">Other Activities</a>
+    <a href="#lectures">Lectures</a>
+    <a href="#publications">Publications</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#additional">Additional Info</a>
+    <a href="#contact">Contact</a>
   </div>
   <div class="hamburger" onclick="toggleMenu()">
     <div></div><div></div><div></div>
   </div>
 </nav>
 
-<!-- The rest of sections (About, Achievements with Gold Medals, Skills, Projects, etc.) will follow this same structure with International/National tabs and publication subsections. -->
+<!-- Header -->
+<header id="home">
+  <h1>Sudarshan Gautam</h1>
+  <p>Researcher in Linguistics & NLP</p>
+  <a href="CV.pdf" class="btn" target="_blank">Download CV</a>
+</header>
+
+<!-- About -->
+<section id="about" class="about">
+  <img src="profile.jpg" alt="Sudarshan Gautam">
+  <div>
+    <h2>About Me</h2>
+    <p>Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks. I began my education in a gurukula, a traditional residential system of learning in India, where I was immersed in classical knowledge under the guidance of my guru. This early education provided a deep understanding of discipline, values, and the holistic approach of traditional scholarship. I hold a BA and MA in Paninian Grammar and have undertaken extensive studies in major branches of Indian philosophy, including Nyāya Darśana, Mīmāṁsā Darśana, and other classical Shastras, developing a strong foundation in logic, linguistics, and analytical reasoning. I am currently pursuing a PhD in Computational Linguistics at the Indian Institute of Technology (IIT), Banaras Hindu University (BHU), Varanasi, with a focus on Paninian Grammar. My research integrates insights from classical grammar with modern computational methods, bridging traditional linguistic theory and contemporary language technology.</p>
+  </div>
+</section>
+
+<!-- Achievements -->
+<section id="achievements" class="achievements">
+<h2>Awards & Achievements</h2>
+<ul>
+<li>UGC NET JRF Award (2022)</li>
+<li>
+<strong>Gold Medals in Acharya (M.A) – Vyakarana (Sanskrit Grammar), 2021</strong>
+<ul>
+<li>Sampurnanand Sanskrit University Gold Medal</li>
+<li>Pt. Brahmadatta Dwivedi Gold Medal</li>
+<li>Shri Vimal Kumar Poddar Gold Medal</li>
+<li>Mahamandaleshwar Pavahari Swami Balakrishna Yati Ji Maharaj Gold Medal</li>
+<li>Mahanta Rameshwar Puri Gold Medal</li>
+</ul>
+</li>
+<li>All India Shalaka Competition Gold Medals in Mīmāṁsā (2019 & 2022)</li>
+<li>Actively participated and secured top positions in multiple Shastrartha and Vakyartha</li>
+</ul>
+</section>
+
+<!-- Skills -->
+<section id="skills" class="skills">
+<h2>Skills & Expertise</h2>
+<ul>
+<li>Paninian Grammar</li>
+<li>Semantics</li>
+<li>Syntax</li>
+<li>Nyāya Darśana</li>
+<li>Mīmāṁsā Darśana</li>
+<li>Śrauta Yajña</li>
+<li>Indian Knowledge Tradition</li>
+</ul>
+</section>
+
+<!-- Projects -->
+<section id="projects" class="projects">
+<h2>Research & Projects</h2>
+<ul>
+<li>"Kātiya-Darśapaurṇamāsīyādhvaryava-Prayogaḥ" – 2-month project internship under the Indian Knowledge System, Government of India (2022)</li>
+</ul>
+</section>
+
+<!-- Mentorship -->
+<section id="mentorship" class="mentorship">
+<h2>Mentorship</h2>
+<ul>
+<li>Mentor, Summer School on "Orienting Ph.D. Scholars for Research in Sanskrit Wisdom-based Computational Linguistics" – International Institute of Information Technology, Hyderabad (June 2024)</li>
+</ul>
+</section>
+
+<!-- Workshops -->
+<section id="workshops" class="workshops">
+<h2>Workshops & Training</h2>
+<div class="tabs">
+<button class="tablinks" onclick="openTab(event,'WorkshopInternational')">International</button>
+<button class="tablinks" onclick="openTab(event,'WorkshopNational')">National</button>
+</div>
+<div id="WorkshopInternational" class="tabcontent">
+<ul>
+<li>International Workshop Example 1 – 2023</li>
+<li>International Workshop Example 2 – 2024</li>
+</ul>
+</div>
+<div id="WorkshopNational" class="tabcontent">
+<ul>
+<li>National Workshop on "Various Dimensions of Sanskrit and Computer Science" – Vedic Science Centre, BHU, Varanasi (2024)</li>
+</ul>
+</div>
+</section>
+
+<!-- Seminars -->
+<section id="seminars" class="seminars">
+<h2>Seminars/Conferences</h2>
+<div class="tabs">
+<button class="tablinks" onclick="openTab(event,'SeminarInternational')">International</button>
+<button class="tablinks" onclick="openTab(event,'SeminarNational')">National</button>
+</div>
+<div id="SeminarInternational" class="tabcontent">
+<ul>
+<li>"Śrauta-Yajñeṣu Pāṇinīyopakāraḥ" – Paninian Grammar and Its Application, Three-Day International Seminar, Central Sanskrit University, Prayagraj (2023)</li>
+<li>International Conference on "Āyurveda, Dhanurveda, Arthaśāstra, and Śāstravākyārtha in Gurukula Education" – Sampurnanand Sanskrit University, Varanasi (2019)</li>
+</ul>
+</div>
+<div id="SeminarNational" class="tabcontent">
+<ul>
+<li>"Pāṇinīya-Samāsa-Siddhānta-Vimarśaḥ" – All India Patanjali Seminar, BHU, Varanasi (2023)</li>
+</ul>
+</div>
+</section>
+
+<!-- Śāstrārtha/Vākyārtha -->
+<section id="sastrartha" class="workshops">
+<h2>Śāstrārtha / Vākyārtha</h2>
+<div class="tabs">
+<button class="tablinks" onclick="openTab(event,'SastrarthaInternational')">International</button>
+<button class="tablinks" onclick="openTab(event,'SastrarthaNational')">National</button>
+</div>
+<div id="SastrarthaInternational" class="tabcontent">
+<ul>
+<li>International Śāstrārtha Example 1 – 2023</li>
+</ul>
+</div>
+<div id="SastrarthaNational" class="tabcontent">
+<ul>
+<li>National Śāstrārtha Example 1 – 2023</li>
+</ul>
+</div>
+</section>
+
+<!-- Other Activities -->
+<section id="other" class="workshops">
+<h2>Other Activities</h2>
+<ul>
+<li>Active participation in cultural and academic events</li>
+<li>Teaching assistantships, workshops, and seminar organization</li>
+</ul>
+</section>
+
+<!-- Lectures -->
+<section id="lectures" class="lectures">
+<h2>Lectures</h2>
+<ul>
+<li>International Conference on "Āyurveda, Dhanurveda, Arthaśāstra, and Śāstravākyārtha in Gurukula Education" – Sampurnanand Sanskrit University, Varanasi (2019)</li>
+</ul>
+</section>
+
+<!-- Publications -->
+<section id="publications" class="publications">
+<h2>Publications</h2>
+<div class="tabs">
+<button class="tablinks" onclick="openTab(event,'PubScopus')">Scopus / Web of Science</button>
+<button class="tablinks" onclick="openTab(event,'PubUGCCare')">UGC Care List</button>
+<button class="tablinks" onclick="openTab(event,'PubPeer')">Peer-reviewed</button>
+</div>
+<div id="PubScopus" class="tabcontent">
+<ul>
+<li>Publication Example 1 – 2023 <a href="#">Read</a></li>
+</ul>
+</div>
+<div id="PubUGCCare" class="tabcontent">
+<ul>
+<li>Publication Example 2 – 2022 <a href="#">Read</a></li>
+</ul>
+</div>
+<div id="PubPeer" class="tabcontent">
+<ul>
+<li>Publication Example 3 – 2021 <a href="#">Read</a></li>
+</ul>
+</div>
+</section>
+
+<!-- Gallery -->
+<section id="gallery" class="gallery">
+<h2>Gallery</h2>
+<div class="gallery-grid">
+<div><img src="img1.jpg" alt="Image 1"><h3>Image 1</h3><p>Caption</p></div>
+<div><img src="img2.jpg" alt="Image 2"><h3>Image 2</h3><p>Caption</p></div>
+<div><img src="img3.jpg" alt="Image 3"><h3>Image 3</h3><p>Caption</p></div>
+</div>
+</section>
+
+<!-- Additional Info -->
+<section id="additional" class="additional">
+<h2>Additional Information</h2>
+<p>Early education was completed through the traditional Gurukul system, followed by specialised studies in Vyākaraṇa (Pāṇinian Grammar) under the classical Kashi tradition. Comprehensive training in Nyāya, Mīmāṁsā, Vedānta, and Vedic Śrauta Yajñas, both in theoretical and practical applications.</p>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="contact">
+<h2>Contact</h2>
+<a href="mailto:example@email.com">Email</a>
+<a href="https://wa.me/919876543210" target="_blank">WhatsApp</a>
+<a href="https://www.linkedin.com/in/example" target="_blank">LinkedIn</a>
+</section>
+
+<!-- Footer -->
+<footer>
+<p>&copy; 2025 Sudarshan Gautam. All Rights Reserved.</p>
+</footer>
 
 <script>
-// Language Toggle
-function toggleLanguage(){
-  document.querySelectorAll('[data-en]').forEach(el=>{
-    let current = el.innerText;
-    if(el.innerText===el.dataset.en){el.innerText=el.dataset.sa;}else{el.innerText=el.dataset.en;}
-  });
+// Navigation Toggle
+function toggleMenu(){ document.getElementById('navLinks').classList.toggle('show'); }
+
+// Tabs
+function openTab(evt, tabName){
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for(i=0;i<tabcontent.length;i++){ tabcontent[i].style.display="none"; }
+  tablinks = document.getElementsByClassName("tablinks");
+  for(i=0;i<tablinks.length;i++){ tablinks[i].className = tablinks[i].className.replace(" active",""); }
+  document.getElementById(tabName).style.display="block";
+  evt.currentTarget.className += " active";
 }
 
-// Date in Top Bar (real-time)
-function updateDate(){
-  const months = ['वैशाख','ज्येष्ठ','आषाढ','श्रावण','भाद्रपद','आश्विन','कार्तिक','मार्गशीर्ष','पौष','माघ','फाल्गुन','चैत्र'];
-  const now = new Date();
-  const day = now.getDate();
-  const month = months[now.getMonth()];
-  const hours = now.getHours().toString().padStart(2,'0');
-  const minutes = now.getMinutes().toString().padStart(2,'0');
-  document.getElementById('datetime').innerText = `Today: ${month} ${day}, Time: ${hours}:${minutes}`;
-}
-updateDate();
-setInterval(updateDate,60000);
-
-// Hamburger Menu
-function toggleMenu(){document.getElementById('navLinks').classList.toggle('show');}
-
-// Section Animation
-const sections = document.querySelectorAll('section');
-window.addEventListener('scroll',()=>{
-  const scrollY = window.pageYOffset;
-  sections.forEach(section=>{
-    if(scrollY + window.innerHeight*0.8 > section.offsetTop){
-      section.classList.add('show');
-    }
+// Scroll Animation
+window.addEventListener('scroll', function(){
+  document.querySelectorAll('section').forEach(function(section){
+    var rect = section.getBoundingClientRect();
+    if(rect.top < window.innerHeight-100){ section.classList.add('show'); }
   });
 });
+
+// Date/Time in विक्रम संवत
+function updateDateTime(){
+  const now = new Date();
+  const options = { weekday:'long', year:'numeric', month:'long', day:'numeric', hour:'2-digit', minute:'2-digit', second:'2-digit'};
+  // Convert AD to Vikram Samvat approx: VS = AD + 56 + (if before Chaitra ~0)
+  let vsYear = now.getFullYear() + 56;
+  let vsMonth = now.getMonth()+1;
+  let vsDay = now.getDate();
+  let time = now.toLocaleTimeString('en-GB');
+  document.getElementById('datetime').innerText = `वि.सं. ${vsYear}-${vsMonth}-${vsDay} | Time: ${time}`;
+}
+setInterval(updateDateTime,1000);
+updateDateTime();
+
+// Language Toggle Placeholder
+function toggleLanguage(){ alert('Language toggle functionality can be implemented.'); }
 </script>
+
 </body>
 </html>
