Update index.html: email icon updated

--- a/index.html
+++ b/index.html
@@ -347,11 +347,17 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 <!-- Contact -->
 <section id="contact" class="contact">
   <h2 data-en="Contact" data-sa="संपर्क करें">Contact</h2>
-  <a href="mailto:example@email.com"><img src="email.png" alt="Email" width="20"> example@email.com</a>
-  <a href="https://wa.me/1234567890"><img src="whatsapp.png" alt="WhatsApp" width="20"> +91 1234567890</a>
-  <a href="#"><img src="linkedin.png" alt="LinkedIn" width="20"> LinkedIn</a>
-  <a href="#"><img src="twitter.png" alt="Twitter" width="20"> Twitter</a>
+  <a href="mailto:sudarshangautam.rs.hss22@itbhu.ac.in" target="_blank">
+    <img src="email.png" alt="Email" width="40">
+  </a>
+  <a href="https://wa.me/+918859744949" target="_blank">
+    <img src="whatsapp.png" alt="WhatsApp" width="40">
+  </a>
+  <a href="https://www.linkedin.com/in/your-linkedin-id" target="_blank">
+    <img src="linkedin.png" alt="LinkedIn" width="40">
+  </a>
 </section>
+
 
 <footer>
   &copy; 2025 Sudarshan Gautam. All rights reserved.
