Update index.html: sanskrit updated

--- a/index.html
+++ b/index.html
@@ -135,20 +135,20 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 <nav>
   <div class="logo" style="color:#fff; font-weight:bold;">Sudarshan Gautam</div>
   <div class="nav-links" id="navLinks">
-    <a href="#home" data-en="Home" data-sa="मुख्यपृष्ठ">Home</a>
-    <a href="#about" data-en="About Me" data-sa="मेरे बारे में">About Me</a>
-    <a href="#achievements" data-en="Awards & Achievements" data-sa="पुरस्कार और उपलब्धियाँ">Awards & Achievements</a>
-    <a href="#skills" data-en="Skills & Expertise" data-sa="कौशल और विशेषज्ञता">Skills & Expertise</a>
-    <a href="#projects" data-en="Projects" data-sa="परियोजनाएँ">Projects</a>
-    <a href="#workshops" data-en="Workshops & Training" data-sa="कार्यशालाएँ">Workshops</a>
-    <a href="#seminars" data-en="Seminars/Conferences" data-sa="सम्मेलन/संगोष्ठियाँ">Seminars/Conferences</a>
-    <a href="#shastrartha" data-en="Śāstrārtha/Vākyārtha" data-sa="शास्त्रार्थ/वाक्यार्थ">Śāstrārtha/Vākyārtha</a>
-    <a href="#mentorship" data-en="Mentorship" data-sa="मार्गदर्शन">Mentorship</a>
-    <a href="#lectures" data-en="Lectures" data-sa="व्याख्यान">Lectures</a>
-    <a href="#publications" data-en="Publications" data-sa="प्रकाशन">Publications</a>
-    <a href="#activities" data-en="Other Activities" data-sa="अन्य गतिविधियाँ">Other Activities</a>
-    <a href="#gallery" data-en="Gallery" data-sa="गैलरी">Gallery</a>
-    <a href="#contact" data-en="Contact" data-sa="संपर्क करें">Contact</a>
+    <a href="#home" data-en="Home" data-sa="मुख्यपृष्ठम्">Home</a>
+    <a href="#about" data-en="About Me" data-sa="मदीयविषये किञ्चित्">About Me</a>
+    <a href="#achievements" data-en="Awards & Achievements" data-sa="पुरस्काराः उपलब्धयश्च ">Awards & Achievements</a>
+    <a href="#skills" data-en="Skills & Expertise" data-sa="प्रावीण्यम् एवं विशेषज्ञता">Skills & Expertise</a>
+    <a href="#projects" data-en="Projects" data-sa="परियोजनाः">Projects</a>
+    <a href="#workshops" data-en="Workshops & Training" data-sa="कार्यशालाः">Workshops</a>
+    <a href="#seminars" data-en="Seminars/Conferences" data-sa="सम्मेलनानि/सङ्गोष्ठ्यः">Seminars/Conferences</a>
+    <a href="#shastrartha" data-en="Śāstrārtha/Vākyārtha" data-sa="शास्त्रार्थाः/वाक्यार्थाः">Śāstrārtha/Vākyārtha</a>
+    <a href="#mentorship" data-en="Mentorship" data-sa="निर्देशकत्वम्">Mentorship</a>
+    <a href="#lectures" data-en="Lectures" data-sa="व्याख्यानानि">Lectures</a>
+    <a href="#publications" data-en="Publications" data-sa="प्रकाशनानि">Publications</a>
+    <a href="#activities" data-en="Other Activities" data-sa="अन्यानि">Other Activities</a>
+    <a href="#gallery" data-en="Gallery" data-sa="दर्शनीयानि">Gallery</a>
+    <a href="#contact" data-en="Contact" data-sa="संपर्कः">Contact</a>
   </div>
   <div class="hamburger" onclick="toggleMenu()">
     <div></div><div></div><div></div>
@@ -158,24 +158,24 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 <!-- Header -->
 <header id="home">
   <h1 data-en="Sudarshan Gautam" data-sa="सुदर्शन गौतम">Sudarshan Gautam</h1>
-  <p data-en="Researcher in Linguistics & NLP" data-sa="भाषाविज्ञान और एनएलपी में शोधकर्ता">Researcher in Linguistics & NLP</p>
+  <p data-en="Researcher in Computational Linguistics at IIT (BHU)" data-sa="सङ्गणकभाषाविज्ञाने अनुसन्धाता, भारतीय प्रौद्योगिकी संस्थानम्, काशी हिन्दू विश्वविद्यालयः  ">Researcher in Computational Linguistics </p>
 </header>
 
 <!-- About -->
 <section id="about" class="about">
   <img src="profile.jpg" alt="Sudarshan Gautam">
   <div>
-    <h2 data-en="About Me" data-sa="मेरे बारे में">About Me</h2>
+    <h2 data-en="About Me" data-sa="मदीयविषये किञ्चित्">About Me</h2>
     <p data-en="Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks. I began my education in a gurukula, a traditional residential system of learning in India, where I was immersed in classical knowledge under the guidance of my guru. This early education provided a deep understanding of discipline, values, and the holistic approach of traditional scholarship. I hold a BA and MA in Paninian Grammar and have undertaken extensive studies in major branches of Indian philosophy, including Nyāya Darśana, Mīmāṁsā Darśana, and other classical Shastras, developing a strong foundation in logic, linguistics, and analytical reasoning. I am currently pursuing a PhD in Computational Linguistics at IIT BHU, Varanasi, focusing on Paninian Grammar. My research integrates insights from classical grammar with modern computational methods, bridging traditional linguistic theory and contemporary language technology." data-sa="नमस्ते! मैं सुदर्शन गौतम, भाषाविज्ञान, एनएलपी और बहुभाषी कम्प्यूटेशनल फ्रेमवर्क में विशेषज्ञ शोधकर्ता हूँ। मैंने अपनी प्रारंभिक शिक्षा एक गुरुकुल प्रणाली में प्राप्त की, जहाँ मैंने अपने गुरु के मार्गदर्शन में शास्त्रीय ज्ञान में प्रशिक्षण प्राप्त किया। इस प्रारंभिक शिक्षा ने अनुशासन, मूल्य और पारंपरिक विद्वत्तापूर्ण दृष्टिकोण की गहरी समझ प्रदान की। मेरे पास पाणिनीय व्याकरण में BA और MA है, और मैंने भारतीय दर्शन के प्रमुख शाखाओं में व्यापक अध्ययन किया है। मैं वर्तमान में IIT BHU, वाराणसी में कम्प्यूटेशनल भाषाविज्ञान में पीएचडी कर रहा हूँ, जिसमें पाणिनीय व्याकरण पर विशेष ध्यान है।">
       Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks. I began my education in a gurukula, a traditional residential system of learning in India, where I was immersed in classical knowledge under the guidance of my guru. This early education provided a deep understanding of discipline, values, and the holistic approach of traditional scholarship. I hold a BA and MA in Paninian Grammar and have undertaken extensive studies in major branches of Indian philosophy, including Nyāya Darśana, Mīmāṁsā Darśana, and other classical Shastras, developing a strong foundation in logic, linguistics, and analytical reasoning. I am currently pursuing a PhD in Computational Linguistics at IIT BHU, Varanasi, focusing on Paninian Grammar. My research integrates insights from classical grammar with modern computational methods, bridging traditional linguistic theory and contemporary language technology.
     </p>
-    <a href="CV.pdf" class="btn" target="_blank" data-en="Download CV" data-sa="CV डाउनलोड करें">Download CV</a>
+    <a href="CV.pdf" class="btn" target="_blank" data-en="Download CV" data-sa="CV सङ्गृह्यताम्">Download CV</a>
   </div>
 </section>
 
 <!-- Achievements -->
 <section id="achievements" class="achievements">
-  <h2 data-en="Awards & Achievements" data-sa="पुरस्कार और उपलब्धियाँ">Awards & Achievements</h2>
+  <h2 data-en="Awards & Achievements" data-sa="पुरस्काराः उपलब्धयश्च">Awards & Achievements</h2>
   <ul>
     <li>
       <strong>Gold Medals in Acharya (M.A) – Vyakarana (Sanskrit Grammar), 2021</strong>
@@ -195,7 +195,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Skills -->
 <section id="skills" class="skills">
-  <h2 data-en="Skills & Expertise" data-sa="कौशल और विशेषज्ञता">Skills & Expertise</h2>
+  <h2 data-en="Skills & Expertise" data-sa="प्रावीण्यम् एवं विशेषज्ञता">Skills & Expertise</h2>
   <ul>
     <li>Paninian Grammar</li>
     <li>Semantics</li>
@@ -209,7 +209,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Projects -->
 <section id="projects" class="projects">
-  <h2 data-en="Projects" data-sa="परियोजनाएँ">Projects</h2>
+  <h2 data-en="Projects" data-sa="परियोजनाः">Projects</h2>
   <ul>
     <li>"Kātiya-Darśapaurṇamāsīyādhvaryava-Prayogaḥ" – 2-month project internship under Indian Knowledge System, Government of India (2022)</li>
   </ul>
@@ -217,7 +217,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Workshops -->
 <section id="workshops" class="workshops">
-  <h2 data-en="Workshops & Training" data-sa="कार्यशालाएँ">Workshops & Training</h2>
+  <h2 data-en="Workshops & Training" data-sa="कार्यशालाः">Workshops & Training</h2>
   <div class="tabs">
     <button class="tablinks" onclick="openTab(event,'WorkshopInternational')">International</button>
     <button class="tablinks" onclick="openTab(event,'WorkshopNational')">National</button>
@@ -238,7 +238,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Seminars -->
 <section id="seminars" class="seminars">
-  <h2 data-en="Seminars/Conferences" data-sa="सम्मेलन/संगोष्ठियाँ">Seminars/Conferences</h2>
+  <h2 data-en="Seminars/Conferences" data-sa="सम्मेलनानि/सङ्गोष्ठ्यः">Seminars/Conferences</h2>
   <div class="tabs">
     <button class="tablinks" onclick="openTab(event,'SeminarInternational')">International</button>
     <button class="tablinks" onclick="openTab(event,'SeminarNational')">National</button>
@@ -258,7 +258,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Śāstrārtha/Vākyārtha -->
 <section id="shastrartha" class="shastrartha">
-  <h2 data-en="Śāstrārtha/Vākyārtha" data-sa="शास्त्रार्थ/वाक्यार्थ">Śāstrārtha/Vākyārtha</h2>
+  <h2 data-en="Śāstrārtha/Vākyārtha" data-sa="शास्त्रार्थाः/वाक्यार्थाः">Śāstrārtha/Vākyārtha</h2>
   <div class="tabs">
     <button class="tablinks" onclick="openTab(event,'ShastrarthaInternational')">International</button>
     <button class="tablinks" onclick="openTab(event,'ShastrarthaNational')">National</button>
@@ -277,7 +277,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Mentorship -->
 <section id="mentorship" class="mentorship">
-  <h2 data-en="Mentorship" data-sa="मार्गदर्शन">Mentorship</h2>
+  <h2 data-en="Mentorship" data-sa="निर्देशकत्वम्">Mentorship</h2>
   <ul>
     <li>Mentor, Summer School on "Orienting Ph.D. Scholars for Research in Sanskrit Wisdom-based Computational Linguistics" – IIIT Hyderabad (June 2024)</li>
   </ul>
@@ -285,7 +285,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Lectures -->
 <section id="lectures" class="lectures">
-  <h2 data-en="Lectures" data-sa="व्याख्यान">Lectures</h2>
+  <h2 data-en="Lectures" data-sa="व्याख्यानानि">Lectures</h2>
   <ul>
     <li>Lecture Example 1 – 2023</li>
     <li>Lecture Example 2 – 2024</li>
@@ -294,7 +294,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Publications -->
 <section id="publications" class="publications">
-  <h2 data-en="Publications" data-sa="प्रकाशन">Publications</h2>
+  <h2 data-en="Publications" data-sa="प्रकाशनानि">Publications</h2>
   <h3>Scopus/Web of Science</h3>
   <ul>
     <li>Publication Example 1 <a href="#">View</a></li>
@@ -315,7 +315,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Other Activities -->
 <section id="activities" class="activities">
-  <h2 data-en="Other Activities" data-sa="अन्य गतिविधियाँ">Other Activities</h2>
+  <h2 data-en="Other Activities" data-sa="अन्यानि">Other Activities</h2>
   <ul>
     <li>Additional activity 1</li>
     <li>Additional activity 2</li>
@@ -324,7 +324,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Gallery -->
 <section id="gallery" class="gallery">
-  <h2 data-en="Gallery" data-sa="गैलरी">Gallery</h2>
+  <h2 data-en="Gallery" data-sa="दर्शनीयानि">Gallery</h2>
   <div class="gallery-grid">
     <div>
       <img src="img1.jpg" alt="Random Image 1">
@@ -346,7 +346,7 @@ footer { text-align:center; padding:30px 20px; background:#1e3a8a; color:#fff; }
 
 <!-- Contact -->
 <section id="contact" class="contact">
-  <h2 data-en="Contact" data-sa="संपर्क करें">Contact</h2>
+  <h2 data-en="Contact" data-sa="संपर्कः">Contact</h2>
   <a href="mailto:sudarshangautam.rs.hss22@itbhu.ac.in" target="_blank">
     <img src="email.png" alt="Email" width="40">
   </a>
